scrollbar style fixed for firefox

--- a/app/styles/base/_typography.scss
+++ b/app/styles/base/_typography.scss
@@ -61,8 +61,8 @@ body {
     margin: 0 auto;
 
     @include respond(tab-land) {
-        font-size: 6rem;
-        width: 80%;
+        font-size: 5.5rem;
+        width: 85%;
     }
 
     @include respond(tab-port) {
